- Add SettingsComponent and AccountSettingsComponent - Add settings routerLink into sidemenu - Add changePassword() - Add Commons Text dependency

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,11 @@
         <a nz-button nzType="link">About Us</a>
       </li>
 
+      <li nz-menu-item nzMatchRouter routerLink="/settings" (click)="minimizeSidebar()">
+        <i nz-icon nzType="setting"></i>
+        <a nz-button nzType="link">Settings</a>
+      </li>
+
       <li nz-menu-item nzMatchRouter *ngIf="user" (click)="logout()">
         <i nz-icon nzType="logout"></i>
         <a nz-button nzType="link">Logout</a>
