--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,34 +1,36 @@
 <div *ngIf="adminProfile">
-  <nz-page-header class="site-page-header">
-    <nz-page-header-title>{{ (adminProfile?.fullName | titlecase) || "-" }} Profile</nz-page-header-title>
-    <nz-page-header-extra>
-      <button nz-button nz-dropdown [nzDropdownMenu]="actionMenu">Actions<i nz-icon nzType="down"></i></button>
-      <nz-dropdown-menu #actionMenu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item (click)="enterEditAdminMode()">Update Profile</li>
-          <li nz-menu-item>Delete Admin</li>
-        </ul>
-      </nz-dropdown-menu>
-    </nz-page-header-extra>
-    <nz-page-header-content>
-      <form nz-form [formGroup]="adminForm">
+  <h4>Profile</h4>
+  <nz-divider></nz-divider>
+
+  <nz-row nzJustify="start">
+    <nz-col [nzXs]="24" [nzMd]="10" [nzLg]="7" [nzXl]="5" [nzXXl]="3">
+      <img
+        nz-image
+        width="250px"
+        height="250px"
+        nzSrc="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
+        alt="Profile picture"
+      />
+    </nz-col>
+    <nz-col [nzXs]="24" [nzMd]="14" [nzLg]="17" [nzXl]="19" [nzXXl]="21">
+      <form nz-form [formGroup]="adminForm" *ngIf="nzEditAdmin; else displayAdminProfileTpl">
         <nz-form-item>
-          <nz-form-label [nzSm]="24" [nzMd]="4" class="fw-bold">Name</nz-form-label>
-          <nz-form-control [nzSm]="24" [nzMd]="17">
-            <span>{{ adminProfile?.fullName || "-" }}</span>
+          <nz-form-label nzSpan="24" class="fw-bold">Name</nz-form-label>
+          <nz-form-control nzSpan="12" [nzErrorTip]="fullNameErrorTpl">
+            <input nz-input formControlName="fullName">
           </nz-form-control>
+          <ng-template #fullNameErrorTpl let-control>
+            <div *ngIf="control.invalid && (control.touched || control.dirty)">
+              <div *ngIf="control.errors?.required">
+                Please input your full name.
+              </div>
+            </div>
+          </ng-template>
         </nz-form-item>
 
-        <nz-form-item *ngIf="!nzEditAdmin">
-          <nz-form-label [nzSm]="24" [nzMd]="4" class="fw-bold">E-mail</nz-form-label>
-          <nz-form-control [nzSm]="24" [nzMd]="17">
-            <span>{{ adminProfile?.email || "-" }}</span>
-          </nz-form-control>
-        </nz-form-item>
-
-        <nz-form-item *ngIf="nzEditAdmin">
-          <nz-form-label [nzSm]="24" [nzMd]="4" class="fw-bold">E-mail</nz-form-label>
-          <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="emailErrorTpl">
+        <nz-form-item>
+          <nz-form-label nzSpan="24" class="fw-bold">E-mail</nz-form-label>
+          <nz-form-control nzSpan="12" [nzErrorTip]="emailErrorTpl">
             <input nz-input type="email" formControlName="email" (ngModelChange)="validateEmail()">
           </nz-form-control>
           <ng-template #emailErrorTpl let-control>
@@ -46,16 +48,9 @@
           </ng-template>
         </nz-form-item>
 
-        <nz-form-item *ngIf="!nzEditAdmin">
-          <nz-form-label [nzSm]="24" [nzMd]="4" class="fw-bold">Contact No</nz-form-label>
-          <nz-form-control [nzSm]="24" [nzMd]="17">
-            <span>{{ adminProfile?.contactNo || "-" }}</span>
-          </nz-form-control>
-        </nz-form-item>
-
-        <nz-form-item *ngIf="nzEditAdmin">
-          <nz-form-label [nzSm]="24" [nzMd]="4" class="fw-bold">Contact No</nz-form-label>
-          <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="contactNoErrorTpl">
+        <nz-form-item>
+          <nz-form-label nzSpan="24" class="fw-bold">Contact No</nz-form-label>
+          <nz-form-control nzSpan="12" [nzErrorTip]="contactNoErrorTpl">
             <input nz-input type="text" formControlName="contactNo">
             <ng-template #contactNoErrorTpl let-control>
               <div *ngIf="control.invalid && (control.touched || control.dirty)">
@@ -67,21 +62,52 @@
           </nz-form-control>
         </nz-form-item>
 
-        <nz-form-item *ngIf="nzEditAdmin">
-          <nz-form-label [nzSm]="24" [nzMd]="4" nzNoColon></nz-form-label>
+        <nz-form-item>
           <nz-form-control [nzSm]="24" [nzMd]="17">
-            <nz-space *ngIf="nzEditAdmin">
-              <button *nzSpaceItem nz-button nzType="primary" [disabled]="!adminForm.valid || !adminForm.touched || !adminForm.dirty" (click)="submitAdminForm()"
+            <nz-space>
+              <button *nzSpaceItem nz-button nzType="primary"
+                      [disabled]="!adminForm.valid || !adminForm.touched || !adminForm.dirty"
+                      (click)="submitAdminForm()"
                       [nzLoading]="isSubmitting">Update
               </button>
               <button *nzSpaceItem nz-button nzType="default" (click)="cancelNzEdit()">Cancel</button>
             </nz-space>
           </nz-form-control>
         </nz-form-item>
-
       </form>
-    </nz-page-header-content>
-  </nz-page-header>
+
+      <ng-template #displayAdminProfileTpl>
+        <nz-form-item>
+          <nz-form-label nzSpan="24" class="fw-bold">Name</nz-form-label>
+          <nz-form-control nzSpan="24">
+            <span style="white-space: normal; word-break: break-word">{{adminProfile?.fullName || "-"}}</span>
+          </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+          <nz-form-label nzSpan="24" class="fw-bold">E-mail</nz-form-label>
+          <nz-form-control nzSpan="24">
+            <span style="white-space: normal; word-break: break-word">{{adminProfile?.email || "-"}}</span>
+          </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+          <nz-form-label nzSpan="24" class="fw-bold">Contact No</nz-form-label>
+          <nz-form-control nzSpan="24">
+            {{adminProfile?.contactNo || "-"}}
+          </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+          <nz-form-control nzSpan="24">
+            <nz-space>
+              <button *nzSpaceItem nz-button nzType="primary" (click)="enterEditAdminMode()">Edit Profile</button>
+            </nz-space>
+          </nz-form-control>
+        </nz-form-item>
+      </ng-template>
+    </nz-col>
+  </nz-row>
 </div>
 
 <div *ngIf="userProfile">
