- Add Profile Picture for admin - Allow add / update profile picture for admin - Display profile picture in ProfileComponent & PostFeedComponent

--- a/src/app/shared/components/post-feed/post-feed.component.html
+++ b/src/app/shared/components/post-feed/post-feed.component.html
@@ -13,7 +13,7 @@
                     [nzDescription]="descriptionTemplate"></nz-card-meta>
 
       <ng-template #avatarTemplate>
-        <nz-avatar [nzSrc]="dummyPhotoUrl"></nz-avatar>
+        <nz-avatar [nzSrc]="getProfilePicture(post.adminBean)"></nz-avatar>
       </ng-template>
 
       <ng-template #titleTemplate>
