--- a/src/app/user/admin/admin-detail/admin-detail.component.html
+++ b/src/app/user/admin/admin-detail/admin-detail.component.html
@@ -59,6 +59,18 @@
           </nz-select>
         </nz-form-control>
       </nz-form-item>
+
+      <nz-form-item>
+        <nz-form-label [nzSpan]="7" class="fw-bold">Profile Picture</nz-form-label>
+        <nz-form-control [nzSpan]="17" nzErrorTip="Please select role(s) for the staff!">
+          <nz-upload [nzLimit]="1" nzListType="picture" [(nzFileList)]="fileList" [nzBeforeUpload]="beforeUpload" [nzRemove]="removeFile" [nzAccept]="['image/png', 'image/jpeg']">
+            <button nz-button [disabled]="fileList.length >= 1">
+              <i nz-icon nzType="upload"></i>Select {{ fileList?.length || 0 }} / 1 Image
+            </button>
+          </nz-upload><br>
+          <p>Please make sure that the uploaded image is in the aspect ratio between 1:1 (square size).</p>
+        </nz-form-control>
+      </nz-form-item>
     </form>
   </ng-container>
 
