--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -3,7 +3,7 @@
   <nz-divider></nz-divider>
 
   <nz-row nzJustify="start">
-    <nz-col [nzXs]="24" [nzMd]="10" [nzLg]="7" [nzXl]="5" [nzXXl]="3">
+    <nz-col [nzXs]="24" [nzMd]="10" [nzLg]="7" [nzXl]="5">
       <img
         style="object-fit: cover"
         nz-image
@@ -13,7 +13,7 @@
         alt="Profile picture"
       />
     </nz-col>
-    <nz-col [nzXs]="24" [nzMd]="14" [nzLg]="17" [nzXl]="19" [nzXXl]="21">
+    <nz-col [nzXs]="24" [nzMd]="14" [nzLg]="17" [nzXl]="19">
       <form nz-form [formGroup]="adminForm" *ngIf="nzEditAdmin; else displayAdminProfileTpl">
         <nz-form-item>
           <nz-form-label nzSpan="24" class="fw-bold">Name</nz-form-label>
@@ -81,11 +81,27 @@
           </nz-form-control>
         </nz-form-item>
 
+        <nz-form-item *ngIf="isSuperAdmin">
+          <nz-form-label nzSpan="24" class="fw-bold">Account Role(s)</nz-form-label>
+          <nz-form-control nzSpan="12" [nzErrorTip]="roleErrorTpl">
+            <nz-select nzMode="multiple" nzPlaceHolder="Select account role" formControlName="roleList">
+              <nz-option *ngFor="let role of roleChoices" [nzLabel]="role.text" [nzValue]="role.value"></nz-option>
+            </nz-select>
+            <ng-template #roleErrorTpl let-control>
+              <div *ngIf="control.invalid && (control.touched || control.dirty)">
+                <div *ngIf="control.errors?.required">
+                  Please select at least 1 role.
+                </div>
+              </div>
+            </ng-template>
+          </nz-form-control>
+        </nz-form-item>
+
         <nz-form-item>
           <nz-form-control [nzSm]="24" [nzMd]="17">
             <nz-space>
               <button *nzSpaceItem nz-button nzType="primary"
-                      [disabled]="!adminForm.valid || !adminForm.touched || !adminForm.dirty"
+                      [disabled]="!adminForm.valid || (!adminForm.touched && !adminForm.dirty)"
                       (click)="submitAdminForm()"
                       [nzLoading]="isSubmitting">Update
               </button>
