--- a/src/app/appointment/appointment-form/appointment-form.component.html
+++ b/src/app/appointment/appointment-form/appointment-form.component.html
@@ -1,7 +1,7 @@
 <form nz-form [formGroup]="form">
   <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="6" class="fw-bold" nzRequired>Date</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="dateErrorTpl">
+    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Date</nz-form-label>
+    <nz-form-control [nzSpan]="24" [nzErrorTip]="dateErrorTpl">
       <nz-date-picker formControlName="date" (ngModelChange)="initTimeSlotDropdownChoice()" [nzDisabledDate]="disabledDate"></nz-date-picker>
       <ng-template #dateErrorTpl let-control>
         <div *ngIf="control.invalid && (control.touched || control.dirty)">
@@ -14,8 +14,8 @@
   </nz-form-item>
 
   <nz-form-item *ngIf="!isAdmin">
-    <nz-form-label [nzSm]="24" [nzMd]="6" class="fw-bold">Admin</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="17">
+    <nz-form-label [nzSpan]="24" class="fw-bold">Admin</nz-form-label>
+    <nz-form-control [nzSpan]="24">
       <nz-select nzAllowClear nzShowSearch nzPlaceHolder="Select admin" formControlName="adminUsername" (ngModelChange)="initTimeSlotDropdownChoice()">
         <nz-option *ngFor="let choice of adminChoice" [nzLabel]="choice?.text" [nzValue]="choice.value"></nz-option>
       </nz-select>
@@ -23,9 +23,9 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="6" class="fw-bold" nzRequired>Time</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="timeErrorTpl">
-      <nz-select nzAllowClear nzShowSearch formControlName="time">
+    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Time</nz-form-label>
+    <nz-form-control [nzSpan]="24" [nzErrorTip]="timeErrorTpl">
+      <nz-select nzAllowClear nzShowSearch formControlName="time" [nzPlaceHolder]="form.controls['date'].value ? 'Please select a timeslot' : 'Please select a date first'">
         <nz-option *ngFor="let choice of timeslotList" [nzLabel]="choice?.text" [nzValue]="choice?.value" [nzDisabled]="choice?.disabled"></nz-option>
       </nz-select>
       <ng-template #timeErrorTpl let-control>
@@ -39,8 +39,8 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label [nzSm]="24" [nzMd]="6" class="fw-bold" nzRequired>Purpose</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="purposeErrorTpl">
+    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Purpose</nz-form-label>
+    <nz-form-control [nzSpan]="24" [nzErrorTip]="purposeErrorTpl">
       <textarea nz-input [maxlength]="200" [rows]="4" formControlName="purpose"></textarea>
       {{ form.controls['purpose'].value?.length || 0 }} / 200 characters
       <ng-template #purposeErrorTpl let-control>
@@ -54,8 +54,8 @@
   </nz-form-item>
 
   <nz-form-item *ngIf="isAdmin">
-    <nz-form-label [nzSm]="24" [nzMd]="6" class="fw-bold" nzRequired>User</nz-form-label>
-    <nz-form-control [nzSm]="24" [nzMd]="17" [nzErrorTip]="userErrorTpl">
+    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>User</nz-form-label>
+    <nz-form-control [nzSpan]="24" [nzErrorTip]="userErrorTpl">
       <nz-select nzAllowClear nzShowSearch formControlName="username" nzPlaceHolder="Select user">
         <nz-option *ngFor="let choice of userChoice" [nzLabel]="choice?.text" [nzValue]="choice.value"></nz-option>
       </nz-select>
