--- a/src/app/appointment/appointment-mngmt/appointment-mngmt.component.html
+++ b/src/app/appointment/appointment-mngmt/appointment-mngmt.component.html
@@ -86,7 +86,6 @@
           nzTitle="Change Appointment's Datetime"
           (nzOnCancel)="cancelChangeDatetime()">
   <ng-container *nzModalContent>
-    <nz-alert nzType="info" nzMessage="Default duration for each appointment is 1 hour."></nz-alert>
     <form nz-form [formGroup]="changeAppointmentDatetimeForm">
       <nz-form-item>
         <nz-form-label [nzXs]="24" [nzMd]="8" class="fw-bold">Scheduled Datetime</nz-form-label>
@@ -95,28 +94,37 @@
           - {{ (appointment?.appointmentEndTime | date: 'short') || "-" }}
         </nz-form-control>
       </nz-form-item>
+
       <nz-form-item>
-        <nz-form-label [nzXs]="24" [nzMd]="8" nzRequired class="fw-bold test">New Date</nz-form-label>
-        <nz-form-control [nzXs]="24" [nzMd]="16" [nzErrorTip]="dateErrorTpl">
-          <nz-date-picker nzFormat="dd-MM-yyyy" formControlName="date"></nz-date-picker>
+        <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Date</nz-form-label>
+        <nz-form-control [nzSpan]="24" [nzErrorTip]="dateErrorTpl">
+          <nz-date-picker formControlName="date" (ngModelChange)="initTimeSlotDropdownChoice()" [nzDisabledDate]="disabledDate"></nz-date-picker>
           <ng-template #dateErrorTpl let-control>
-            <div *ngIf="control.invalid && (control.dirty || control.touched)">
-              <div *ngIf="control.errors?.required">Please select a date!</div>
+            <div *ngIf="control.invalid && (control.touched || control.dirty)">
+              <div *ngIf="control.errors?.required">
+                Please select a date!
+              </div>
             </div>
           </ng-template>
         </nz-form-control>
       </nz-form-item>
+
       <nz-form-item>
-        <nz-form-label [nzXs]="24" [nzMd]="8" nzRequired class="fw-bold test">New Time</nz-form-label>
-        <nz-form-control [nzXs]="24" [nzMd]="16" [nzErrorTip]="timeErrorTpl">
-          <nz-time-picker nzFormat="hh a" formControlName="time"></nz-time-picker>
+        <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Time</nz-form-label>
+        <nz-form-control [nzSpan]="24" [nzErrorTip]="timeErrorTpl">
+          <nz-select nzAllowClear nzShowSearch formControlName="time" [nzPlaceHolder]="changeAppointmentDatetimeForm.controls['date'].value ? 'Please select a timeslot' : 'Please select a date first'">
+            <nz-option *ngFor="let choice of timeslotList" [nzLabel]="choice?.text" [nzValue]="choice?.value" [nzDisabled]="choice?.disabled"></nz-option>
+          </nz-select>
           <ng-template #timeErrorTpl let-control>
-            <div *ngIf="control.invalid && (control.dirty || control.touched)">
-              <div *ngIf="control.errors?.required">Please select a time!</div>
+            <div *ngIf="control.invalid && (control.touched || control.dirty)">
+              <div *ngIf="control.errors?.required">
+                Please select a time!
+              </div>
             </div>
           </ng-template>
         </nz-form-control>
       </nz-form-item>
+
     </form>
   </ng-container>
   <div *nzModalFooter>
